#
# requires:
#  apt install rustc
#  apt apt install libgtk-3-dev			# Fix for: The system library gdk-3.0 required by crate gdk-sys was not found.

[package]
name = "vectorlab"
version = "0.0.1"
edition = "2021"		# cargo edition: Perfect for graphics/OpenGL + SVG projects in 2025
## Perplexity says: "For your Nuremberg-based Rust+SVG+3D printing workflow, 
## 2021 gives maximum stability with zero migration pain."
# edition = "2024"		# update when winit/glutin publish 2024-compatible versions
default-run = "vectorlab"	# makes '--bin vectorlab' default for cargo run

[[bin]]
name = "vectorlab"
path = "src/vectorlab.rs"	# implements:	cargo run --bin vectorlab


[dependencies]
# femtovg = { path = "../../femtovg/femtovg" }	# from local github checkout
# femtovg = { git = "https://github.com/femtovg/femtovg.git", branch = "main" }
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
glow = "0.13"
egui = "0.28"
egui-winit = "0.28"
egui_glow = "0.28"
usvg = "0.30"
resvg = "0.38"
tiny-skia = "0.11"
env_logger = "0.11"
futures = "0.3"

